--- a/Meeting Minutes/181017.md
+++ b/Meeting Minutes/181017.md
@@ -25,7 +25,7 @@ We decided to do self-proposed.
   * Read a recipe, make shopping list
   * Your washing is ready
 * Martial Arts Sparring Trainer -
-* Robot Cameraman -
+* Robot Cameraman +
 
 We decided to go with the Mail robot/Robot Postbox project because it has a decent amount of human interaction, it’s relatively achievable to get a Minimum Viable Product quickly, and it has a lot of scope for improvement. It is also highly parallelisable.
 
