--- a/interface/mailbot/app/src/main/res/values/strings.xml
+++ b/interface/mailbot/app/src/main/res/values/strings.xml
@@ -55,6 +55,13 @@
     <!--En Route Activity Strings-->
     <string name="enRouteActivitySpeech">I am now delivering the mail items that have been handed to me! If you want to send your own mail item, find me in reception at the next collection time!</string>
 
+    <!--Password Activity Strings-->
+    <string name="PasswordActivitySpeech">Please enter the personal PIN code that has been sent to you via e-mail to open the locker containing your mail item.</string>
+
+    <!--Unsuccessful Activity Strings-->
+    <string name="UnsuccessfulActivitySpeech_PIN">Sorry, the wrong PIN code has been entered three times so the mail item will remain secured. The sender will be able to retrieve it at the next collection time.</string>
+    <string name="UnsuccessfulActivitySpeech_knock">Sorry, nobody was around to collect the mail item so the locker will remain secured. The sender will be able to retrieve it at the next collection time.</string>
+
     <!--Open Locker Activity Strings-->
     <string name="openLockerActivitySpeech">That\'s the correct password! A locker for your mail item has been opened! Please retrieve your item, and then close the locker.</string>
 </resources>
